@@ -1,3 +1,9 @@
+2007-02-08  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el: added useful wrapper to recursive-edit
+
+	* config/org-config.el (org-agenda): don't minimize ecb compilation window
+
 2007-01-27  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* lib/psvn.el: update from mainstream
